| Summary: | ASTERISK-26418: res_rtp_asterisk: Speed up ICE resolution by blacklisting host subnets that are not involved in RTP | ||
| Reporter: | Michael Walton (mike@farsouthnet.com) | Labels: | |
| Date Opened: | 2016-09-28 12:33:38 | Date Closed: | 2016-10-19 17:42:04 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 13.11.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | All | Attachments: | |
| Description: | ICE resolution in res_rtp_asterisk currently obtains host candidates from all available interfaces on the machine, causing STUN to be attempted on all of these and increasing the size of the candidate list. In many cases, there are interfaces / subnets that are not of interest for ICE/RTP, for example local interface or VPNs. This enhancement provides the capability to blacklist subnets in rtp.conf using lines like:
{{ice_blacklist=10.5.5.0/24}} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-09-28 12:33:38.587-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2016-10-04 12:04:42.293-0500 I'm putting this into feedback until such time as a patch is uploaded, either to this issue or to Gerrit directly. If you have any difficulty just shout! By: Michael Walton (mike@farsouthnet.com) 2016-10-04 19:07:43.324-0500 Attached ported blackice patch. Builds cleanly. By: Richard Mudgett (rmudgett) 2016-10-19 17:42:04.191-0500 Patches merged to branches. | ||